==> ldavicoclases/sapi_bluepill/libs/sapi/sapi_v0.5.2/soc/peripherals/src/sapi_uart.c <==
#include "sapi_uart.h"
#include "string.h"
#include "sapi_circularBuffer.h"
#include "sapi_gpio.h"

static void uartProcessIRQ( uartMap_t uart )
{
   // Rx Interrupt
   if(__HAL_UART_GET_FLAG(stmUarts[uart].uart, UART_FLAG_RXNE) == SET) { // uartRxReady
      // Execute callback
      if( ( uart == UART_1 ) && (rxIsrCallbackUART1 != 0) )
         (*rxIsrCallbackUART1)(0);

      if( ( uart == UART_2 ) && (rxIsrCallbackUART2 != 0) )
         (*rxIsrCallbackUART2)(0);

      if( ( uart == UART_3 ) && (rxIsrCallbackUART3 != 0) )
         (*rxIsrCallbackUART3)(0);
   }

   // Tx Interrupt
   if(__HAL_UART_GET_FLAG(stmUarts[uart].uart, UART_FLAG_TC) == SET) {

      // Execute callback
      if( ( uart == UART_1 ) && (txIsrCallbackUART1 != 0) )
         (*txIsrCallbackUART1)(0);

      if( ( uart == UART_2 ) && (txIsrCallbackUART2 != 0) )
         (*txIsrCallbackUART2)(0);

      if( ( uart == UART_3 ) && (txIsrCallbackUART3 != 0) )
         (*txIsrCallbackUART3)(0);
   }
}

void uartCallbackSet( uartMap_t uart, uartEvents_t event, 
                      callBackFuncPtr_t callbackFunc, void* callbackParam )
{
   switch(event){

      case UART_RECEIVE:
          __HAL_UART_ENABLE_IT(stmUarts[uart].uart, UART_IT_RXNE);

         if( callbackFunc != 0 ) {
            // Set callback
            if( uart == UART_1 ){
               rxIsrCallbackUART1 = callbackFunc;
               rxIsrCallbackUART1Params = callbackParam;
            }
            if( uart == UART_2 ){
               rxIsrCallbackUART2 = callbackFunc;
               rxIsrCallbackUART2Params = callbackParam;
            }            
            if( uart == UART_3 ){
               rxIsrCallbackUART3 = callbackFunc;
               rxIsrCallbackUART3Params = callbackParam;
            }
         } else{
            return;
         }
      break;

      case UART_TRANSMITER_FREE:
         if( callbackFunc != 0 ) {
            __HAL_UART_ENABLE_IT(stmUarts[uart].uart, UART_IT_TC);
            
            // Set callback
            if( uart == UART_1 ){
               txIsrCallbackUART1 = callbackFunc;
               txIsrCallbackUART1Params = callbackParam;
            }
            if( uart == UART_1 ){
               txIsrCallbackUART2 = callbackFunc;
               txIsrCallbackUART2Params = callbackParam;
            }            
            if( uart == UART_3 ){
               txIsrCallbackUART3 = callbackFunc;
               txIsrCallbackUART3Params = callbackParam;
            }
         } else{
            return;
         }
      break;

      default:
         return;
   }

   // Enable UART Interrupt
   HAL_NVIC_SetPriority(stmUarts[uart].irq, 0, 0);
   HAL_NVIC_EnableIRQ(stmUarts[uart].irq);
}

void uartCallbackClr( uartMap_t uart, uartEvents_t event )
{
   switch(event){

      case UART_RECEIVE:
         __HAL_UART_DISABLE_IT(stmUarts[uart].uart, UART_IT_RXNE);
      break;
      
      case UART_TRANSMITER_FREE:
         __HAL_UART_DISABLE_IT(stmUarts[uart].uart, UART_IT_TC);
      break;
      
      default:
         return;
   }

   // Disable UART Interrupt
   NVIC_DisableIRQ( stmUarts[uart].irq );
}

void uartInit( uartMap_t uart, uint32_t baudRate )
{
   switch( uart ) {
      case UART_1:
          __HAL_RCC_USART1_CLK_ENABLE();
          /**USART1 GPIO Configuration
          PA9     ------> USART1_TX
          PA10     ------> USART1_RX
          */
          __HAL_RCC_GPIOA_CLK_ENABLE();

          stmUarts[uart].uart->Instance = USART1;
          break;
      case UART_2:
          __HAL_RCC_USART2_CLK_ENABLE();
          /**USART2 GPIO Configuration
          PA2     ------> USART2_TX
          PA3     ------> USART2_RX
          */
          __HAL_RCC_GPIOA_CLK_ENABLE();

          stmUarts[uart].uart->Instance = USART2;
          break;
      case UART_3:
          __HAL_RCC_USART3_CLK_ENABLE();
          /**USART3 GPIO Configuration
          PB10     ------> USART3_TX
          PB11     ------> USART3_RX
          */
          __HAL_RCC_GPIOB_CLK_ENABLE();

          stmUarts[uart].uart->Instance = USART3;
          break;
      case UART_USB:
          break;
      default:
          break;
   }

   GPIO_InitTypeDef GPIO_InitStruct = {0};

   GPIO_InitStruct.Pin   = stmUarts[uart].txPin.gpio.pin;
   GPIO_InitStruct.Mode  = stmUarts[uart].txPin.mode;
   GPIO_InitStruct.Pull  = stmUarts[uart].txPin.pull;
   GPIO_InitStruct.Speed = stmUarts[uart].txPin.speed;
   HAL_GPIO_Init(stmUarts[uart].txPin.gpio.port, &GPIO_InitStruct);

   GPIO_InitStruct.Pin   = stmUarts[uart].rxPin.gpio.pin;
   GPIO_InitStruct.Mode  = stmUarts[uart].rxPin.mode;
   GPIO_InitStruct.Pull  = stmUarts[uart].rxPin.pull;
   GPIO_InitStruct.Speed = stmUarts[uart].rxPin.speed;
   HAL_GPIO_Init(stmUarts[uart].rxPin.gpio.port, &GPIO_InitStruct);

   stmUarts[uart].uart->Init.BaudRate     = baudRate;
   stmUarts[uart].uart->Init.WordLength   = UART_WORDLENGTH_8B;
   stmUarts[uart].uart->Init.StopBits     = UART_STOPBITS_1;
   stmUarts[uart].uart->Init.Parity       = UART_PARITY_NONE;
   stmUarts[uart].uart->Init.Mode         = UART_MODE_TX_RX;
   stmUarts[uart].uart->Init.HwFlowCtl    = UART_HWCONTROL_NONE;
   stmUarts[uart].uart->Init.OverSampling = UART_OVERSAMPLING_16;

   HAL_UART_Init(stmUarts[uart].uart);
}

bool_t uartReadByte( uartMap_t uart, uint8_t* receivedByte )
{
    uint16_t *tmp;
    bool_t retVal = FALSE;
    UART_HandleTypeDef *huart;

    huart = stmUarts[uart].uart;

    /* Check that a Rx process is not already ongoing */
    if (huart->RxState == HAL_UART_STATE_READY && receivedByte != NULL) {

       /* Process Locked */
       __HAL_LOCK(huart);

       huart->ErrorCode = HAL_UART_ERROR_NONE;
       huart->RxState = HAL_UART_STATE_BUSY_RX;

       if(__HAL_UART_GET_FLAG(huart, UART_FLAG_RXNE) == SET) {
          if (huart->Init.WordLength == UART_WORDLENGTH_9B) {
             tmp = (uint16_t *) receivedByte;
             if (huart->Init.Parity == UART_PARITY_NONE) {
                *tmp = (uint16_t)(huart->Instance->DR & (uint16_t)0x01FF);
             } else {
                *tmp = (uint16_t)(huart->Instance->DR & (uint16_t)0x00FF);
             }
          } else {
             if (huart->Init.Parity == UART_PARITY_NONE) {
                *receivedByte = (uint8_t)(huart->Instance->DR & (uint8_t)0x00FF);
             } else {
                *receivedByte = (uint8_t)(huart->Instance->DR & (uint8_t)0x007F);
             }
          }
          retVal = TRUE;
       }

       /* At end of Rx process, restore huart->RxState to Ready */
       huart->RxState = HAL_UART_STATE_READY;

       /* Process Unlocked */
       __HAL_UNLOCK(huart);
    }

    return retVal;
}

void uartWriteByte( uartMap_t uart, const uint8_t value )
{
   // Send byte
   HAL_UART_Transmit(stmUarts[uart].uart, &value, 1, 1);
}
