==> LuisLebus/nodoImplementSw/libs/sapi/sapi_v0.5.2/soc/peripherals/src/sapi_uart.c <==
#include "sapi_uart.h"
#include "string.h"

static void uartProcessIRQ( uartMap_t uart )
{
	uint8_t status = Chip_UART_ReadLineStatus( uartModule[uart].addr );

	// Rx Interrupt
	if(status & UART_LSR_RDR) { // uartRxReady
		// Execute callback
		if(uartCallback[uart].rxIsrCallback != 0)
			(*uartCallback[uart].rxIsrCallback)(0);
	}

	// Tx Interrupt
	if( ( status & UART_LSR_THRE ) && // uartTxReady
			( Chip_UART_GetIntsEnabled( uartModule[uart].addr ) & UART_IER_THREINT ) ) {

		// Execute callback
		if(uartCallback[uart].txIsrCallback != 0)
			(*uartCallback[uart].txIsrCallback)(0);
	}
}

void uartCallbackSet( uartMap_t uart, uartEvents_t event, callBackFuncPtr_t callbackFunc, void* callbackParam )
{   
   uint32_t intMask;

   switch(event)
   {

      case UART_RECEIVE:
         // Enable UART Receiver Buffer Register Interrupt
         intMask = UART_IER_RBRINT | UART_IER_RLSINT;
         
         if( callbackFunc != 0 )
         {
        	 // Set callback
        	 uartCallback[uart].rxIsrCallback = callbackFunc;
        	 uartCallback[uart].rxIsrCallbackParams = callbackParam;
         } else
         {
            return;
         }
         break;
      case UART_TRANSMITER_FREE:
         // Enable THRE irq (TX)
         intMask = UART_IER_THREINT;

         if(callbackFunc != 0)
         {
        	 // Set callback
        	 uartCallback[uart].txIsrCallback = callbackFunc;
        	 uartCallback[uart].txIsrCallbackParams = callbackParam;
         }
         else
         {
            return;
         }
         break;
      default:
         return;
   }

   // Enable UART Interrupt
   Chip_UART_IntEnable(uartModule[uart].addr, intMask);
}

void uartCallbackClr( uartMap_t uart, uartEvents_t event )
{
   uint32_t intMask;

   switch(event)
   {
      case UART_RECEIVE:
         // Enable UART Receiver Buffer Register Interrupt
         intMask = UART_IER_RBRINT | UART_IER_RLSINT;
         break;
      case UART_TRANSMITER_FREE:
         // Enable THRE irq (TX)
         intMask = UART_IER_THREINT;
         break;
      default:
         return;
   }

   // Disable UART Interrupt
   Chip_UART_IntDisable(uartModule[uart].addr, intMask);
}

void uartInit( uartMap_t uart, uint32_t baudRate )
{
   // Initialize UART
   Chip_UART_Init( uartModule[uart].addr );
   // Set Baud rate
   Chip_UART_SetBaud( uartModule[uart].addr, baudRate );
   
   //Chip_UART_ConfigData(LPC_UART, (UART_LCR_WLEN8 | UART_LCR_SBS_1BIT));
   
   // Restart FIFOS using FCR (FIFO Control Register).
   // Set Enable, Reset content, set trigger level
   Chip_UART_SetupFIFOS( uartModule[uart].addr,
                         UART_FCR_FIFO_EN |
                         UART_FCR_TX_RS   |
                         UART_FCR_RX_RS   |
                         UART_FCR_TRG_LEV0 );
	/*Chip_UART_SetupFIFOS(lpcUarts[uart].uartAddr, 
                          (UART_FCR_FIFO_EN | UART_FCR_TRG_LEV2));*/
   
   // Dummy read
   Chip_UART_ReadByte( uartModule[uart].addr );
   
   // Enable UART Transmission
   Chip_UART_TXEnable( uartModule[uart].addr );
   
   // Configure UARTn_TXD uartPin
   Chip_IOCON_PinMux(
		   LPC_IOCON,
		   uartModule[uart].tx.port,
		   uartModule[uart].tx.pin,
		   IOCON_MODE_PULLDOWN,
		   uartModule[uart].tx.func );

   // Configure UARTn_RXD uartPin
   Chip_IOCON_PinMux(
		   LPC_IOCON,
		   uartModule[uart].rx.port,
		   uartModule[uart].rx.pin,
		   IOCON_MODE_INACT,
		   uartModule[uart].rx.func );
}

bool_t uartReadByte( uartMap_t uart, uint8_t* receivedByte )
{
   bool_t retVal = TRUE;

   if ( uartRxReady(uart) )
   {
      *receivedByte = uartRxRead(uart);
   }
   else
   {
      retVal = FALSE;
   }

   return retVal;
}

void uartWriteByte( uartMap_t uart, const uint8_t value )
{
   // Wait for space in FIFO (blocking)
   while( uartTxReady( uart ) == FALSE );
   // Send byte
   uartTxWrite( uart, value );
}
